"Record Composite" image op segfaults in compositor code #34474

Closed
opened 2013-02-28 16:03:59 +01:00 by Bastien Montagne · 5 comments

%%%--- Operating System, Graphics card ---
Debian Wheezy 64, ATI HD5730m

- Blender version with error, and version that worked ---

2.66 (r54939)

- Short description of error ---

Once an (even minimal) compo node tree set up, try to execute Record Composite from Image editor showing render result (only from ops menu, not linked anywhere in UI afaik), it segfaults immediately in compo code (see attached bt).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- Debian Wheezy 64, ATI HD5730m - Blender version with error, and version that worked --- 2.66 (r54939) - Short description of error --- Once an (even minimal) compo node tree set up, try to execute Record Composite from Image editor showing render result (only from ops menu, not linked anywhere in UI afaik), it segfaults immediately in compo code (see attached bt). - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

%%%Btw, this operator needs a description, I was trying to figure out what it is supposed to do… :/%%%

%%%Btw, this operator needs a description, I was trying to figure out what it is supposed to do… :/%%%

%%%The UI and various other operators needed for this were never ported to 2.5. I'm not sure why this operator is available even, it should probably be hidden for now unless someone likes to work on bringing back this functionality.%%%

%%%The UI and various other operators needed for this were never ported to 2.5. I'm not sure why this operator is available even, it should probably be hidden for now unless someone likes to work on bringing back this functionality.%%%

%%%I disabled the code now in SVN, these operators indeed were never ported.

ToDo / Closed%%%

%%%I disabled the code now in SVN, these operators indeed were never ported. >> ToDo / Closed%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34474
No description provided.