Fix / Workaround for [#34474] "Record Composite" image op segfaults in compositor code * These operators have never been ported to 2.5x and therefore should not come up inside the UI. (as they are not working).